--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,6 +1,12 @@
-html, body{
+html{
     scroll-behavior: smooth;
     overflow-x: hidden ;
     background-color: white;
     height: 100%;
 }
+ body{
+    scroll-behavior: smooth;
+    background-color: white;
+    height: 100%;
+    width: 100%;
+ }
