--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,6 +2,8 @@ html{
     scroll-behavior: smooth;
     overflow-x: hidden ;
     background-color: white;
+    height: 100%;
+    width: 100%;
 }
  body{
     scroll-behavior: smooth;
