--- a/client/src/components/Powerliftting/Powerlifting.css
+++ b/client/src/components/Powerliftting/Powerlifting.css
@@ -27,12 +27,7 @@
     margin: 10px;
 }
 
-.grid line {
-    /* stroke: gray; */
-    /* stroke-opacity: 0.7; */
-    /* shape-rendering: crispEdges; */
-    /* stroke-width: 1px; */
-}
+
 
 
 .tooltip {
@@ -49,4 +44,72 @@
     opacity: 0;
     margin-top: -19px;
     /* margin-right: 110px; */
+}
+
+
+/* Powerlifting.css */
+
+/* Table Styling */
+table {
+    width: 100%;
+    border-collapse: collapse;
+    margin-top: 20px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+th,
+td {
+    text-align: left;
+    padding: 8px;
+    border-bottom: 1px solid #ddd;
+}
+
+th {
+    background-color: black;
+    color: white;
+}
+
+tr:hover {
+    background-color: #f5f5f5;
+}
+
+/* Button Styling */
+.submit {
+    cursor: pointer;
+    padding: 5px 10px;
+    margin-right: 5px;
+    border: none;
+    border-radius: 10px;
+    background-color: #6c4d7b;
+    color: white;
+    transition: background-color 0.3s ease;
+    outline: none;
+}
+
+.submit:hover {
+    background-color: black;
+}
+
+/* Specific to delete button for a visual cue */
+.delete-btn {
+    background-color: #f44336;
+}
+
+.delete-btn:hover {
+    background-color: #d32f2f;
+}
+
+/* icons button */
+.icons {
+    font-size: 1.3rem;
+    font-weight: bold;
+    background-color: transparent;
+    color: black;
+    outline: none;
+    border: none;
+    cursor: pointer;
+}
+
+.icons:hover {
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
 }
